# MAI_AIS

ProjectCPP/: CMakeLists.txt  VPTestCPP.cpp
hl_mai_lab_00_vp/: components.md  context.md  task.md
hl_mai_lab_01_vp/: CMakeLists.txt  docker-compose.yml  index.yaml  start.sh
hl_mai_lab_01_vp/database/: user.cpp  user.h
hl_mai_lab_01_vp/my_service/: Dockerfile
hl_mai_lab_01_vp/other_server/: Dockerfile  http_other_server.h
hl_mai_lab_01_vp/web_server/handlers/: user_handler.h
